<resources>
    <string name="app_name">papillon</string>
    <string name="token_oauth_error">Authorization failed, please login again</string>
    <string name="search_in_papillon">Search in papillon</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- menu -->
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="designers">Designers</string>
    <string name="buckets">Buckets</string>
    <string name="likes">Likes</string>
    <string name="shots">Shots</string>
    <string name="blog">Blog</string>
    <string name="setting">Setting</string>

    <!-- feed -->
    <string name="popular">popular</string>
    <string name="recent">recent</string>
    <string name="views">views</string>
    <string name="comments">comments</string>
    <string name="following">following</string>
</resources>
